--- a/main.css
+++ b/main.css
@@ -14,11 +14,9 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height:100vh;
-    max-height: max-content;
+    min-height:100vh;
     overflow: scroll;
     position: relative;
-    padding: 10px 0;
 }
 
 .container{
@@ -28,6 +26,7 @@ body{
     /* align-items: center; */
     margin-left: auto;
     margin-right: auto;
+    margin-top: 100px;
     padding: 25px;
     width: 600px;
     border-radius:1rem;
@@ -120,6 +119,7 @@ p{
  }
  .attribution{
     top: 110%;
+    display: block;
   }
 }
 
